--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,2 +1,10 @@
-<h1><span class="text-primary">G-T</span>rans</h1>
-<p class="lead">Welcome to our <span class="text-primary font-weight-bolder">Group Transactions</span> app</p>
+<nav class="navbar navbar-light bg-dark text-white d-flex justify-content-between">
+    <%= link_to  "G-T", root_path, class: "navbar-brand text-primary" %>
+    <ul class="list-unstyled d-flex m-0">
+        <%= navigation %>
+    </ul>
+</nav>
+<div class="container my-5 text-center">
+    <h1><span class="text-primary display-4">G-T</span>rans</h1>
+    <p class="lead">Welcome to our <span>Group Transactions</span> app</p>
+</div>
