--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,10 +12,16 @@
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-    <script src="https://kit.fontawesome.com/032ed71b0e.js" crossorigin="anonymous"></script>
+    <%# <script src="https://kit.fontawesome.com/032ed71b0e.js" crossorigin="anonymous"></script> %>
   </head>
 
   <body>
+    <% if flash[:notice] %>
+      <div class="m-0 alert alert-success"><%= flash[:notice] %></div>  
+    <% end %>
+    <% if flash[:alert] %>
+      <div class="m-0 alert alert-danger"><%= flash[:alert] %></div>
+    <% end %>
     <%= yield %>
   </body>
 </html>
