--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,7 +1,11 @@
-<h1>Sign Up</h1>
-
-<%= form_for (@user) do |f| %>
-<%= f.label :name, "Your name" %><br />
-<%= f.text_field :name %>
-<%= f.submit "Sign Up"%>
-<% end %>
+<div class="container my-5">
+    <h1>Sign Up</h1>
+    <%= form_for(@user, url: sign_up_path) do |f| %>
+        <div class="form-group">
+            <%= f.label :name, "Your name" %>
+            <%= f.text_field :name, class: "form-control" %>
+        </div>
+        <%= f.submit "Sign Up", class: "btn btn-primary mb-1"%>
+    <% end %>
+    <%= link_to  "Already have an account? Log In", login_path %>
+</div>
