--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,15 +12,14 @@
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-    <%# <script src="https://kit.fontawesome.com/032ed71b0e.js" crossorigin="anonymous"></script> %>
   </head>
 
   <body>
-    <% if flash[:notice] %>
-      <div class="m-0 alert alert-success"><%= flash[:notice] %></div>  
-    <% end %>
-    <% if flash[:alert] %>
-      <div class="m-0 alert alert-danger"><%= flash[:alert] %></div>
+    <% flash.each do |type, message| %>
+      <%= content_tag :p, class: "animated fadeInDown m-0 text-center text-#{type} alert alert-#{type}" do -%>
+        <%= message %>
+        <button type="button" class="close" data-dismiss="alert"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+      <% end -%>
     <% end %>
     <%= yield %>
   </body>
