--- a/app/views/charges/show.html.erb
+++ b/app/views/charges/show.html.erb
@@ -1,2 +1,13 @@
 <h1>Charges#show</h1>
 <p>Find me in app/views/charges/show.html.erb</p>
+
+<%= @charge.author.name %>
+
+<% if @charge.groups.empty? %>
+<%= link_to  "Add group", new_group_path %>
+<% else %>
+<% @charge.groups.each do |g| %>
+    <%= g.name %>
+    <%= g.author.name %>  
+<% end %>
+<% end %>
