--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,2 +1,6 @@
 <h1>Users#show</h1>
 <p>Find me in app/views/users/show.html.erb</p>
+
+<%= link_to  "Create Charge", new_charge_path %>
+<br>
+<%= link_to  "Create Group", new_group_path %>
