--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -1,2 +1,13 @@
-<h1>Groups#index</h1>
-<p>Find me in app/views/groups/index.html.erb</p>
+<div class="container my-5">
+    <h2 class="text-dark mb-5"><%= current_user.name %>'s Groups</h2>
+    <% @groups.each do |group| %>
+        <div class="d-flex justify-content-between">
+            <h4 class="text-muted"><%= link_to  group.name, group_path(group), class: "text-info" %></h4>
+            <div>
+                <small class="text-muted"><%= group.created_at %></small>
+            </div>
+        </div>
+        <hr>
+    <% end %>
+    <%= link_to  "Add group", new_group_path, class: "btn btn-success" %>
+</div>
