--- a/app/views/groups/new.html.erb
+++ b/app/views/groups/new.html.erb
@@ -1,3 +1,4 @@
+<div class="container my-5">
 <%= form_for (@group) do |f| %>
     <div class="form-group">
         <%= f.label :name, "Name" %>
@@ -6,3 +7,4 @@
 
     <%= f.submit "Add Group", class: "btn btn-success" %>
 <% end %>
+</div>
