--- a/app/views/charges/index.html.erb
+++ b/app/views/charges/index.html.erb
@@ -1,2 +1,18 @@
-<h1>Charges#index</h1>
-<p>Find me in app/views/charges/index.html.erb</p>
+<div class="container my-5">
+    <h2 class="text-dark mb-5"><%= current_user.name %>'s Charges</h2>
+    <% @charges.each do |charge| %>
+        <div class="d-flex justify-content-between">
+        <% if external.include?(charge) %>
+            <h4 class="text-muted"><%= link_to  charge.name + " (external)", charge_path(charge), class: "text-info" %></h4>
+        <% else %>
+            <h4 class="text-muted"><%= link_to  charge.name, charge_path(charge), class: "text-info" %></h4>
+        <% end %>
+            <div>
+                <p class="lead"><%= charge.amount %>$</p>
+                <small class="text-muted"><%= charge.created_at %></small>
+            </div>
+        </div>
+        <hr>
+    <% end %>
+    <%= link_to  "Add new charge", new_charge_path, class: "btn btn-success" %>
+</div>
