--- a/app/views/charges/new.html.erb
+++ b/app/views/charges/new.html.erb
@@ -1,3 +1,4 @@
+<div class="container my-5">
 <%= form_with(model: @charge, local: true) do |f| %>
     <div class="form-group">
         <%= f.label :name, "Name" %>
@@ -6,7 +7,7 @@
 
     <div class="form-group">
         <%= f.label :amount, "Amount" %>
-        <%= f.text_field :amount, class: "form-control" %>
+        <%= f.number_field :amount, class: "form-control" %>
     </div>
 <% unless @groups.nil? %>
     <div class="form-group">
@@ -16,3 +17,4 @@
 <% end %>
     <%= f.submit "Create", class: "btn btn-success" %>
 <% end %>
+</div>
