--- a/app/views/charges/edit.html.erb
+++ b/app/views/charges/edit.html.erb
@@ -1,2 +1,20 @@
-<h1>Charges#edit</h1>
-<p>Find me in app/views/charges/edit.html.erb</p>
+<div class="container my-5">
+<%= form_with(model: @charge, local: true) do |f| %>
+    <div class="form-group">
+        <%= f.label :name, "Name" %>
+        <%= f.text_field :name, class: "form-control" %>
+    </div>
+
+    <div class="form-group">
+        <%= f.label :amount, "Amount" %>
+        <%= f.number_field :amount, class: "form-control" %>
+    </div>
+    <% unless @groups.empty? %>
+        <div class="form-group">
+            <%= f.label :group, "Choose Group" %>
+            <%= f.select :group_id, @groups.collect {|x| [x.name, x.id]}, {:include_blank => 'Select Group'}, class: "form-control" %>
+        </div>
+    <% end %>
+    <%= f.submit "Create", class: "btn btn-success" %>
+<% end %>
+</div>
