--- a/app/views/charges/new.html.erb
+++ b/app/views/charges/new.html.erb
@@ -9,12 +9,12 @@
         <%= f.label :amount, "Amount" %>
         <%= f.number_field :amount, class: "form-control" %>
     </div>
-<% unless @groups.nil? %>
-    <div class="form-group">
-        <%= f.label :group, "Choose Group" %>
-        <%= f.select :group_id, @groups.collect {|x| [x.name, x.id]}, {:include_blank => 'Select Group'}, class: "form-control" %>
-    </div>
-<% end %>
+    <% unless @groups.empty? %>
+        <div class="form-group">
+            <%= f.label :group, "Choose Group" %>
+            <%= f.select :group_id, @groups.collect {|x| [x.name, x.id]}, {:include_blank => 'Select Group'}, class: "form-control" %>
+        </div>
+    <% end %>
     <%= f.submit "Create", class: "btn btn-success" %>
 <% end %>
 </div>
