--- a/app/views/external_charges/index.html.erb
+++ b/app/views/external_charges/index.html.erb
@@ -1,5 +1,11 @@
 <div class="container my-5">
     <h2 class="text-dark mb-5"><%= current_user.name %>'s External Charges</h2>
+    <% if !external.empty? %>
+    <div class="d-flex justify-content-between">
+        <h4 class="text-muted">Total Amount</h4>
+        <p class="lead border-secondary border py-1 px-4"><%= total_ex %>$</p>
+    </div>
+    <hr>
     <% external.each do |ex| %>
         <div class="d-flex justify-content-between">
             <h4 class="text-muted"><%= link_to  ex.name, charge_path(ex), class: "text-info" %></h4>
@@ -9,6 +15,8 @@
             </div>
         </div>
         <hr>
+    <% end%>
+    <% else %>
+        <p class="lead my-5 text-center">There is no extrnal charges yet</p>
     <% end %>
-    <%= link_to  "Add new EX", new_charge_path, class: "btn btn-success" %>
 </div>
