--- a/app/views/groups/edit.html.erb
+++ b/app/views/groups/edit.html.erb
@@ -1,2 +1,15 @@
-<h1>Groups#edit</h1>
-<p>Find me in app/views/groups/edit.html.erb</p>
+<div class="container my-5">
+<%= form_for (@group) do |f| %>
+    <div class="form-group">
+        <%= f.label :name, "Name" %>
+        <%= f.text_field :name, class: "form-control" %>
+    </div>
+
+    <div class="form-group">
+        <%= f.label :image, "Upload book image" %>
+        <%= f.file_field :image %>
+    </div>
+
+    <%= f.submit "Update", class: "btn btn-success" %>
+<% end %>
+</div>
