--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -1,18 +1,26 @@
 <div class="container my-5">
 <h1>Author: <%= @group.author.name %></h1>
-<div class="d-flex justify-content-between">
-    <div class="d-flex justify-content-between">
-        
-        <h4><%= @group.name %></h4>
+<div class="d-flex justify-content-between my-4">
+    <div class="d-flex justify-content-start">
+        <% if @group.image.exists? %>
+            <%= image_tag @group.image.url, class: "rounded-circle" %>
+        <% end %>
+        <div class="d-block">
+            <h4 class="ml-3"><%= @group.name %><small class="text-secondary ml-3">(<%= total_g(@group) %>$)</small></h4>
+            <small class="text-muted ml-3"><%= @group.created_at %></small>
+        </div>
     </div>
-    <small class="text-muted"><%= @group.created_at %></small>
+    <div class="d-block my-2">
+        <%= link_to  "Update", edit_group_path(@group), class: "btn btn-primary" %>
+        <%= link_to  "Delete", group_path(@group), method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-danger" %>
+    </div>
 </div>
 <% if @group.charges.empty? %>
 <%= link_to  "Add Charges to this group", new_charge_path, class: "btn btn-success" %>
 <% else %>
 <h3>Charges List</h3>
 <ul class="list-unstyled">
-<% @group.charges.each do |c| %>
+<% @group.charges.uniq.each do |c| %>
 <li>
 <%= link_to c.name, charge_path(c) %>
 </li>
