Modify: index pages add new buttons

--- a/app/views/charges/index.html.erb
+++ b/app/views/charges/index.html.erb
@@ -1,7 +1,7 @@
 <div class="container my-5">
     <div class="d-flex justify-content-between align-items-center mb-5">
         <h2 class="text-dark"><%= current_user.name %>'s Charges</h2>
-        <%= link_to  "Add new charge", new_charge_path, class: "btn btn-success w-25" %>
+        <%= link_to  "Add new charge", new_charge_path, class: "btn btn-success" %>
     </div>    
     <div class="d-flex justify-content-between align-items-center">
         <h4 class="text-dark m-0">Total Amount</h4>
